--- a/project/internetSaftey.html
+++ b/project/internetSaftey.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="frame-box main-box">
+        <button type="button"><a href="learningHub.html">قائمة الدروس</a></button>
+    </div>
     <div class="frame-box">
-    <h1>مقدمة في سلامة الإنترنت</h1>
+    <h1 id="Internet1">مقدمة في سلامة الإنترنت</h1>
     <p>لا يكاد يكون هناك حد لما يمكنك القيام به عبر الإنترنت.
          يجعل الإنترنت من الممكن الوصول إلى المعلومات بسرعة، والتواصل مع الناس حول العالم، وأكثر من ذلك بكثير. لكن، للأسف،
           الإنترنت أيضاً يحتوي على بعض المخاطر مثل البرمجيات الضارة،
@@ -31,7 +34,7 @@
           <h2>إنشاء كلمات مرور قوية</h2>
           <hr class="lesson-divder">
           <div class="frame-box">
-            <h1>إنشاء كلمة مرور قوية</h1>
+            <h1 id="Internet2">إنشاء كلمة مرور قوية</h1>
                 <p>
 
 ستحتاج إلى إنشاء كلمة مرور للقيام بكل شيء تقريبًا على الويب، 
@@ -58,13 +61,28 @@
                 إذا اكتشف شخص ما كلمة مرور حساب واحد،
                  ستكون جميع حساباتك الأخرى معرضة للخطر.</li>
             <li>حاول أن تتضمن أرقامًا، ورموزًا، وحروفًا كبيرة وصغيرة معًا.</li>
-            <li>تجنب استخدام الكلمات الموجودة في القاموس. على سبيل المثال، كلمة مرور مثل "الأسد10" تعتبر ضعيفة.</li>
+            <li>تجنب استخدام الكلمات الموجودة في القاموس. على سبيل المثال، كلمة مرور مثل "lion99" تعتبر ضعيفة.</li>
             <li>كلمات المرور العشوائية هي الأقوى. إذا واجهت صعوبة في إنشاء واحدة،
                  يمكنك استخدام مولد كلمات المرور بدلاً من ذلك.
                 <a href="https://privacycanada.net/strong-password-generator/">مولد كلمات مرور</a>
                 </li>
-                
           </ul>
+          <h2>أخطاء شائعة في كلمات المرور</h2>
+          <p>بعض كلمات المرور الأكثر شيوعًا تُبنى على أسماء العائلة أو الهوايات أو مجرد نمط بسيط. 
+            وعلى الرغم من أن هذا النوع من كلمات المرور سهل التذكّر، إلا أنه من بين الأقل أمانًا.
+             دعنا نلقي نظرة على بعض الأخطاء الشائعة في كلمات المرور وكيفية إصلاحها.</p>
+           <ul>
+            <li>كلمة السر:ahmad12ali5</li>
+            <p>قد يقول شخص:"أشكّ في أن أي شخص يمكنه تخمين كلمة مروري!
+                 إنها تتكوّن من أسماء أطفالي وأعمارهم. من غيري قد يعرف ذلك؟"</p>
+             <p>المشكلة: تستخدم كلمة المرور هذه الكثير من المعلومات الشخصية، 
+                إضافةً إلى كلمات شائعة يمكن العثور عليها في القاموس.</p>
+                <p>الحل: يمكن جعل كلمة المرور أقوى باستخدام الرموز، والأحرف الكبيرة، وترتيب أكثر عشوائية. وبدلاً من استخدام معلومات شخصية، يمكن دمج عنصرين غير مرتبطين، مثل اسم لون مع نوع من الطعام، لتكوين كلمة مرور قوية وفريدة.
+
+على سبيل المثال، دمج Blue مع kiwi يمكن أن يصبح:
+BlUe@KiWi9</p>
+           </ul>
           </div>
+
 </body>
 </html>
