--- a/softwareAndHardware.html
+++ b/softwareAndHardware.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="frame-box main-box">
-        <button type="button"><a href="learningHub.html">قائمة الدروس</a></button>
+        <button type="button"><a href="index.html">قائمة الدروس</a></button>
     </div>
     <div class="frame-box">
     <h1>الأجهزة (Hardware) والبرمجيات (Software)</h1>
@@ -35,4 +35,5 @@
                       <p>الأجهزة والبرمجيات يشكلان معًا البنية التحتية لأي جهاز إلكتروني. يتطلب تطور التكنولوجيا تطورًا متزامنًا في كلا العنصرين لضمان أداء فعال وموثوق.</p>
           </div>
 </body>
+
 </html>
