--- a/internetSaftey.html
+++ b/internetSaftey.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="frame-box main-box">
-        <button type="button"><a href="index.html">قائمة الدروس</a></button>
+        <button type="button"><a href="learningHub.html">قائمة الدروس</a></button>
     </div>
     <div class="frame-box">
     <h1 id="Internet1">مقدمة في سلامة الإنترنت</h1>
@@ -85,5 +85,4 @@ BlUe@KiWi9</p>
           </div>
 
 </body>
-
 </html>
