--- a/index.html
+++ b/index.html
@@ -3,21 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>مركز التعلم - مهاراتك الرقمية</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1 style="text-align: center;font-size: 50px;">قائمة الدروس</h1>
-    <div class="frame-box">
-        <ul>
-            <li>عن الإنترنت
-                <ul>
-                 <li><a href="internetSaftey.html#Internet1">مقدمة في سلامة الإنترنت</a></li>
-                 <li><a href="internetSaftey.html#Internet2">كيفية إنشاء كلمة مرور قوية</a></li>
-            </ul>
-            </li>
-            <li><a href="softwareAndHardware.html">الفرق بين البرمجيات والأجهزة</a></li>
+
+<div class="container">
+
+    <!-- اللوقو -->
+    <img src="images/مهاراتك التقنية.png" class="logo-img" alt="مهاراتك الرقمية">
+
+    <!-- العنوان -->
+    <h1>أهلاً بك في موقع مهاراتك الرقمية</h1>
+
+    <!-- الفقرة الرئيسية -->
+    <p>
+        نحن منصّة تفاعلية تهدف إلى تمكين المبتدئين من اكتساب المهارات الرقمية الأساسية بسهولة ووضوح،
+        عبر محتوى مبسّط يساعدك على تطوير قدراتك وبناء مستقبل مهني أفضل في العالم الرقمي المتسارع.
+    </p>
+
+    <!-- قائمة الفوائد -->
+    <ul class="benefits">
+        <li>تعزيز فرصك في الحصول على وظائف أفضل.</li>
+        <li>سهولة التعامل مع الأجهزة والتطبيقات الحديثة.</li>
+        <li>رفع كفاءتك في الدراسة والعمل عن بُعد.</li>
+        <li>اكتساب مهارات تقنية أساسية تساعدك في الحياة اليومية.</li>
+        <li>زيادة الإنتاجية والقدرة على حل المشكلات الرقمية.</li>
+    </ul>
+
+    <!-- رابط البدء -->
+    <p class="start-link">
+        <a href="about.html">ابدأ رحلتك الآن →</a>
+    </p>
+
+    <!-- روابط الصفحات -->
+    <div class="nav-links">
+        <ul class="menu">
+            <li><a href="index.html">الرئيسية</a></li>
+            <li><a href="about.html">من نحن</a></li>
+            <li><a href="skills.html">المهارات</a></li>
+            <li><a href="contact.html">اتصل بنا</a></li>
         </ul>
     </div>
+
+</div>
+
 </body>
 </html>
