--- a/about.html
+++ b/about.html
@@ -5,56 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>من نحن - مهاراتك الرقمية</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        .main-menu{
+            text-align: center;
+            width: fit-content;
+            position: fixed;
+            top:0;
+            right:0;
+        }
+    </style>
 </head>
 
 <body>
-
-<div class="container">
-
-    <!-- اللوقو -->
-    <img src="images/مهاراتك التقنية.png" class="logo-img" alt="مهاراتك الرقمية">
-
-    <h1>من نحن</h1>
-
+      <ul class="frame-box main-menu">
+         <li><a href="index.html">الصفحة الرئيسية</a></li>
+        <li><a href="learningHub.html">قائمة الدروس</a></li>
+        <li><a href="stories.html">قصص نجاح</a></li>
+        <li><a href="resource.html">المراجع</a></li>
+        <li><a href="about.html">من نحن</a></li>
+        <li><a href="contact.html">تواصل معنا</a></li>
+      </ul>
+    <div class="frame-box">
+        <img src="images/logo.png" class="logo-img" alt="مهاراتك الرقمية">
+        <h1 style="font-size: 44px;text-align: center;">مرحبا بكم في موقع مهاراتك الرقمية</h1>
+    <h2>من نحن</h2>
     <p>
         منصّة <strong>مهاراتك الرقمية</strong> تم إنشاؤها بهدف دعم المبتدئين وتمكينهم من دخول العالم الرقمي بسهولة، 
         من خلال توفير محتوى مبسّط ومفهوم يساعد في تنمية المهارات الأساسية المطلوبة للدراسة والعمل.
     </p>
-
-    <h2 class="section-title">رؤيتنا</h2>
+    <h2>رؤيتنا</h2>
     <p>
         أن نكون المنصّة التعليمية الأولى التي تمنح المستخدمين القدرة على التعامل مع التكنولوجيا بثقة، 
         وتساعدهم في بناء مستقبل رقمي أفضل.
     </p>
 
-    <h2 class="section-title">رسالتنا</h2>
+    <h2>رسالتنا</h2>
     <p>
         نشر المعرفة الرقمية بأسلوب بسيط وواضح، ودعم كل شخص يرغب في تطوير مهاراته التقنية مهما كان مستواه.
     </p>
 
-    <h2 class="section-title">أهدافنا</h2>
-    <ul class="benefits">
+    <h2>أهدافنا</h2>
+    <ul>
         <li>تقديم مصادر تعليمية واضحة للمبتدئين.</li>
         <li>رفع مستوى الوعي بالمهارات الرقمية الأساسية.</li>
         <li>تطوير قدرات المستخدمين للدراسة والعمل عبر الإنترنت.</li>
         <li>تسهيل الوصول إلى مهارات يحتاجها سوق العمل.</li>
     </ul>
 
-    <h2 class="section-title">فريق العمل</h2>
+    <h2>فريق العمل</h2>
     <p>
         يتكون فريقنا من مجموعة طلاب متخصصين في تطوير الويب والتقنيات الحديثة، 
         يعملون بجد لتقديم محتوى موثوق ومناسب لجميع الفئات.
     </p>
-
-    <div class="nav-links">
-        <ul class="menu">
+        <ul>
             <li><a href="index.html">الرئيسية</a></li>
             <li><a href="about.html">من نحن</a></li>
-            <li><a href="skills.html">المهارات</a></li>
+            <li><a href="learningHub.html">المهارات</a></li>
             <li><a href="contact.html">اتصل بنا</a></li>
         </ul>
-    </div>
-
 </div>
 
 </body>
