--- a/internetSaftey.html
+++ b/internetSaftey.html
@@ -5,11 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+     <style>
+        .main-menu{
+            text-align: center;
+            width: fit-content;
+            position: fixed;
+            top:0;
+            right:0;
+        }
+    </style>
 </head>
 <body>
-    <div class="frame-box main-box">
-        <button type="button"><a href="learningHub.html">قائمة الدروس</a></button>
-    </div>
+ <ul class="frame-box main-menu">
+         <li><a href="index.html">الصفحة الرئيسية</a></li>
+        <li><a href="learningHub.html">قائمة الدروس</a></li>
+        <li><a href="stories.html">قصص نجاح</a></li>
+        <li><a href="resource.html">المراجع</a></li>
+        <li><a href="about.html">من نحن</a></li>
+        <li><a href="contact.html">تواصل معنا</a></li>
+      </ul>
     <div class="frame-box">
     <h1 id="Internet1">مقدمة في سلامة الإنترنت</h1>
     <p>لا يكاد يكون هناك حد لما يمكنك القيام به عبر الإنترنت.
