--- a/learningHub.html
+++ b/learningHub.html
@@ -5,8 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+     <style>
+        .main-menu{
+            text-align: center;
+            width: fit-content;
+            position: fixed;
+            top:0;
+            right:0;
+        }
+    </style>
 </head>
 <body>
+<ul class="frame-box main-menu">
+         <li><a href="index.html">الصفحة الرئيسية</a></li>
+        <li><a href="learningHub.html">قائمة الدروس</a></li>
+        <li><a href="stories.html">قصص نجاح</a></li>
+        <li><a href="resource.html">المراجع</a></li>
+        <li><a href="about.html">من نحن</a></li>
+        <li><a href="contact.html">تواصل معنا</a></li>
+      </ul>
     <h1 style="text-align: center;font-size: 50px;">قائمة الدروس</h1>
     <div class="frame-box">
         <ul>
