--- a/index.html
+++ b/index.html
@@ -5,44 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مركز التعلم - مهاراتك الرقمية</title>
     <link rel="stylesheet" href="style.css">
+     <style>
+        .main-menu{
+            text-align: center;
+            width: fit-content;
+            position: fixed;
+            top:0;
+            right:0;
+        }
+    </style>
 </head>
 
 <body>
-
-<div class="container">
-
-    <!-- اللوقو -->
-    <img src="images/مهاراتك التقنية.png" class="logo-img" alt="مهاراتك الرقمية">
-
-    <!-- العنوان -->
-    <h1>أهلاً بك في موقع مهاراتك الرقمية</h1>
-
-    <!-- الفقرة الرئيسية -->
+   <ul class="frame-box main-menu">
+         <li><a href="index.html">الصفحة الرئيسية</a></li>
+        <li><a href="learningHub.html">قائمة الدروس</a></li>
+        <li><a href="stories.html">قصص نجاح</a></li>
+        <li><a href="resource.html">المراجع</a></li>
+        <li><a href="about.html">من نحن</a></li>
+        <li><a href="contact.html">تواصل معنا</a></li>
+      </ul>
+      <div class="frame-box">
+          <h1>أهلاً بك في موقع مهاراتك الرقمية</h1>
+          <img src="images/logo.png" class="logo-img" alt="مهاراتك الرقمية">
     <p>
         نحن منصّة تفاعلية تهدف إلى تمكين المبتدئين من اكتساب المهارات الرقمية الأساسية بسهولة ووضوح،
         عبر محتوى مبسّط يساعدك على تطوير قدراتك وبناء مستقبل مهني أفضل في العالم الرقمي المتسارع.
     </p>
-
-    <!-- قائمة الفوائد -->
-    <ul class="benefits">
+    <ul>
         <li>تعزيز فرصك في الحصول على وظائف أفضل.</li>
         <li>سهولة التعامل مع الأجهزة والتطبيقات الحديثة.</li>
         <li>رفع كفاءتك في الدراسة والعمل عن بُعد.</li>
         <li>اكتساب مهارات تقنية أساسية تساعدك في الحياة اليومية.</li>
         <li>زيادة الإنتاجية والقدرة على حل المشكلات الرقمية.</li>
     </ul>
-
-    <!-- رابط البدء -->
     <p class="start-link">
         <a href="about.html">ابدأ رحلتك الآن →</a>
     </p>
-
-    <!-- روابط الصفحات -->
     <div class="nav-links">
         <ul class="menu">
             <li><a href="index.html">الرئيسية</a></li>
             <li><a href="about.html">من نحن</a></li>
-            <li><a href="skills.html">المهارات</a></li>
+            <li><a href="learningHub.html">قائمة الدروس</a></li>
             <li><a href="contact.html">اتصل بنا</a></li>
         </ul>
     </div>
