--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
          <li><a href="index.html">الصفحة الرئيسية</a></li>
         <li><a href="learningHub.html">قائمة الدروس</a></li>
         <li><a href="stories.html">قصص نجاح</a></li>
+        <li><a href="test.html">اختبر نفسك</a></li>
         <li><a href="resource.html">المراجع</a></li>
         <li><a href="about.html">من نحن</a></li>
         <li><a href="contact.html">تواصل معنا</a></li>
@@ -58,15 +59,11 @@
             <textarea id="message" name="message" rows="6" placeholder="اكتب رسالتك هنا"></textarea>
             <br><br>
             <button type="submit">إرسال</button>
-            <button type="submit">إعادة ضبط</button>
+            <button type="reset">إعادة ضبط</button>
         </form>
         <hr class="lesson-divider">
         <h2>معلومات التواصل المباشرة</h2>
         <table id="tb">
-            <tr>
-                <td>النوع</td>
-                <td>المعلومات</td>
-            </tr>
             <tr>
                 <td>البريد الإلكتروني</td>
                 <td>support@example.com</td>
