--- a/stories.html
+++ b/stories.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar" dir="rtl"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-     <style>
-        .main-menu{
+    <title>قصص النجاح</title>
+    <style>
+      .main-menu{
             text-align: center;
             width: fit-content;
             position: fixed;
             top:0;
             right:0;
         }
-    </style>
+        </style>
 </head>
 <body>
-<ul class="frame-box main-menu">
+    <ul class="frame-box main-menu">
          <li><a href="index.html">الصفحة الرئيسية</a></li>
         <li><a href="learningHub.html">قائمة الدروس</a></li>
         <li><a href="stories.html">قصص نجاح</a></li>
@@ -25,17 +25,13 @@
         <li><a href="about.html">من نحن</a></li>
         <li><a href="contact.html">تواصل معنا</a></li>
       </ul>
-    <h1 style="text-align: center;font-size: 50px;">قائمة الدروس</h1>
-    <div class="frame-box">
+    <div class="frame-box ">
+        <h2>قائمة القصص</h2>
         <ul>
-            <li>عن الإنترنت
-                <ul>
-                 <li><a href="internetSaftey.html#Internet1">مقدمة في سلامة الإنترنت</a></li>
-                 <li><a href="internetSaftey.html#Internet2">كيفية إنشاء كلمة مرور قوية</a></li>
-            </ul>
-            </li>
-            <li><a href="softwareAndHardware.html">الفرق بين البرمجيات والأجهزة</a></li>
+            <li><a href="digitalskills.html"> من مبتدئ الى أول موقع</a></li>
+            <li><a href="secondstory.html">من عامل مطعم الى مطور مواقع</a></li>
         </ul>
     </div>
+    
 </body>
 </html>
