--- a/about.html
+++ b/about.html
@@ -17,10 +17,11 @@
 </head>
 
 <body>
-      <ul class="frame-box main-menu">
+    <ul class="frame-box main-menu">
          <li><a href="index.html">الصفحة الرئيسية</a></li>
         <li><a href="learningHub.html">قائمة الدروس</a></li>
         <li><a href="stories.html">قصص نجاح</a></li>
+        <li><a href="test.html">اختبر نفسك</a></li>
         <li><a href="resource.html">المراجع</a></li>
         <li><a href="about.html">من نحن</a></li>
         <li><a href="contact.html">تواصل معنا</a></li>
