--- a/self-assessment.html
+++ b/self-assessment.html
@@ -2,142 +2,140 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <titlle>اختبار تجريبي  </titlle> 
-   <style>
+  <title>Tech Skills for Beginners – اختبار</title>
 
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #2E3440;
-      color: #D8DEE9;
-      direction: rtl;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-
-    .frame-box {
-      width: 80%;
-      margin: 40px auto;
-      background-color: #3B4252;
-      border: 1px solid #434C5E;
-      padding: 20px;
-    }
-
-    .frame-box h1 {
-      color: #81A1C1;
-      font-size: 28px;
-    }
-
-    .question {
-      border: 1px solid #434C5E;
-      margin-bottom: 20px;
-      padding: 10px;
-      text-align: right;
-      background-color: #2E3440;
-    }
-
-    .question-title {
-      color: #E5E9F0;
-      font-size: 20px;
-      font-weight: bold;
-    }
-
-    input[type="text"],
-    textarea,
-    select {
-      width: 90%;
-      padding: 5px;
-      margin-top: 8px;
-      border: 1px solid #999;
-      background-color: #3B4252;
-      color: #D8DEE9;
-    }
-
-    label {
-      display: block;
-      margin: 6px 0;
-    }
-
-    input[type="radio"],
-    input[type="checkbox"] {
-      margin-left: 6px;
-    }
-
-    /* أكبر حجم للأزرار */
-    .submit-btn,
-    .reset-btn {
-      background-color: #81A1C1;
-      color: #2E3440;
-      border: 1px solid #2E3440;
-      padding: 20px 60px;      /* أكبر طول وعرض */
-      font-size: 28px;         /* أكبر خط */
-      width: 260px;            /* عرض كبير */
-      margin: 30px 15px;       /* مسافة كبيرة */
-      cursor: pointer;
-    }
-
-    .submit-btn:hover,
-    .reset-btn:hover {
-      background-color: #A3BE8C;
-      color: #000;
-    }
-
-  </style>
+  <link rel="stylesheet" href="Style.css">
 
 </head>
-
 <body>
 
   <div class="frame-box">
 
-    <h1>اختبار – Tech Skills for Beginners</h1>
+    <h1>اختبار – موقع مهارتك الرقمية</h1>
 
-    <form>
 
-      <fieldset class="question">
-        <legend class="question-title">1) ما هو نظام التشغيل الأكثر شيوعاً؟</legend>
-        <label><input type="radio" name="q1"> Windows</label>
-        <label><input type="radio" name="q1"> Linux</label>
-        <label><input type="radio" name="q1"> macOS</label>
-      </fieldset>
+    <fieldset class="question">
+      <legend class="question-title">1 ما هو نظام التشغيل الأكثر شيوعاً بين المبتدئين؟</legend>
 
-      <fieldset class="question">
-        <legend class="question-title">2) مهارة البحث عبر الإنترنت تعني:</legend>
-        <input type="text">
-      </fieldset>
+      <label><input type="radio" name="q1"><span>Linux</span></label>
+      <label><input type="radio" name="q1"><span>Windows</span></label>
+      <label><input type="radio" name="q1"><span>macOS</span></label>
+      <label><input type="radio" name="q1"><span>ChromeOS</span></label>
+    </fieldset>
 
-      <fieldset class="question">
-        <legend class="question-title">3) صح أم خطأ: يجب أن تحتوي كلمة المرور على رموز.</legend>
-        <label><input type="radio" name="q3"> صح</label>
-        <label><input type="radio" name="q3"> خطأ</label>
-      </fieldset>
+   
+    <fieldset class="question">
+      <legend class="question-title">2) ما المهارة التي تعني القدرة على البحث عبر الإنترنت؟</legend>
+      <input type="text" placeholder="مثلًا: مهارات البحث أو البحث الرقمي...">
+    </fieldset>
 
-      <fieldset class="question">
-        <legend class="question-title">4) Google Drive يستخدم لتخزين الملفات في ________.</legend>
-        <input type="text">
-      </fieldset>
 
-      <fieldset class="question">
-        <legend class="question-title">5) اختر التطبيق المستخدم لكتابة المستندات:</legend>
-        <select>
-          <option disabled selected></option>
-          <option>Microsoft Word</option>
-          <option>Google Docs</option>
-          <option>Notepad</option>
-        </select>
-      </fieldset>
+    <fieldset class="question">
+      <legend class="question-title">
+        3) صح أم خطأ: كلمة السر القوية تحتوي أحرف كبيرة وصغيرة وأرقاماً ورموزاً.
+      </legend>
 
-      <fieldset class="question">
-        <legend class="question-title">6) اختر المهارات التي تعتبر Tech Skills للمبتدئين:</legend>
-        <label><input type="checkbox" name="q6"> استخدام البريد الإلكتروني</label>
-        <label><input type="checkbox" name="q6"> إنشاء حساب Google Drive</label>
-        <label><input type="checkbox" name="q6"> تطوير ألعاب متقدمة</label>
-      </fieldset>
+      <label><input type="radio" name="q3"><span>صح</span></label>
+      <label><input type="radio" name="q3"><span>خطأ</span></label>
+    </fieldset>
 
-      <button type="submit" class="submit-btn">Submit</button>
-      <button type="reset" class="reset-btn">Reset</button>
 
-    </form>
+    <fieldset class="question">
+      <legend class="question-title">
+        4) Google Drive يُستخدم لتخزين الملفات في ________.
+      </legend>
+      <input type="text" placeholder="اكتب كلمة: السحابة / Cloud مثلًا">
+    </fieldset>
+
+    
+    <fieldset class="question">
+      <legend class="question-title">
+        5) اختر التطبيق المستخدم غالباً لإنشاء المستندات النصية:
+      </legend>
+
+      <select>
+        <option disabled selected>اختر الإجابة</option>
+        <option>Microsoft Word</option>
+        <option>Adobe Premiere</option>
+        <option>Visual Studio Code</option>
+      </select>
+    </fieldset>
+
+
+    <fieldset class="question">
+      <legend class="question-title">
+        6) ما المقصود بـ Basic Computer Skills؟
+      </legend>
+
+      <textarea rows="3" placeholder="اكتب تعريفاً مختصراً لمهارات الحاسوب الأساسية..."></textarea>
+    </fieldset>
+
+    
+    <fieldset class="question">
+      <legend class="question-title">
+        7) أي من الآتي يعتبر مهارة رقمية أساسية للمبتدئين؟
+      </legend>
+
+      <label><input type="radio" name="q7"><span>استخدام البريد الإلكتروني</span></label>
+      <label><input type="radio" name="q7"><span>برمجة ألعاب متقدمة</span></label>
+      <label><input type="radio" name="q7"><span>تعديل فيديو احترافي معقد</span></label>
+    </fieldset>
+
+   
+    <div class="lesson-divider"></div>
+
+  
+    <fieldset class="question">
+      <legend class="question-title">
+        8) المقصود بـ Inline CSS هو:
+      </legend>
+
+      <label>
+        <input type="radio" name="q8">
+        <span>كتابة كود CSS داخل وسم HTML مباشرة باستخدام الخاصية style=""</span>
+      </label>
+      <label>
+        <input type="radio" name="q8">
+        <span>كتابة كود CSS في ملف خارجي فقط</span>
+      </label>
+      <label>
+        <input type="radio" name="q8">
+        <span>استخدام إطار عمل جاهز مثل Bootstrap فقط</span>
+      </label>
+    </fieldset>
+
+    <fieldset class="question">
+      <legend class="question-title">
+        9) ما اسم الأداة الخاصة بكتابة الأوامر النصية في نظام التشغيل؟ 
+      </legend>
+      <input type="text" placeholder="Terminal / Command Prompt / الطرفية">
+    </fieldset>
+
+    <fieldset class="question">
+      <legend class="question-title">
+        10) اختر المهارات التي تعتبر من Tech Skills للمبتدئين:
+      </legend>
+
+      <label>
+        <input type="checkbox" name="q10">
+        <span>استخدام البريد الإلكتروني</span>
+      </label>
+
+      <label>
+        <input type="checkbox" name="q10">
+        <span>إنشاء حساب Google Drive</span>
+      </label>
+
+      <label>
+        <input type="checkbox" name="q10">
+        <span>تصميم لعبة ثلاثية الأبعاد معقّدة جداً</span>
+      </label>
+
+      <label>
+        <input type="checkbox" name="q10">
+        <span>استخدام محرّر نصوص بسيط مثل Word</span>
+      </label>
+    </fieldset>
 
   </div>
 
