--- a/learningHub.html
+++ b/learningHub.html
@@ -24,6 +24,7 @@
         <li><a href="resource.html">المراجع</a></li>
         <li><a href="about.html">من نحن</a></li>
         <li><a href="contact.html">تواصل معنا</a></li>
+        
       </ul>
     <h1 style="text-align: center;font-size: 50px;">قائمة الدروس</h1>
     <div class="frame-box">
@@ -35,6 +36,7 @@
             </ul>
             </li>
             <li><a href="softwareAndHardware.html">الفرق بين البرمجيات والأجهزة</a></li>
+            <li><a href="cloudcomputing.html">ما هي الحوسبة السحابية ولماذا نستخدمها؟</a></li>
         </ul>
     </div>
 </body>
