--- a/internetSaftey.html
+++ b/internetSaftey.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>أمن الأنترنت</title>
+    <title>الانترنت الآمن</title>
     <link rel="stylesheet" href="style.css">
      <style>
         .main-menu{
@@ -102,3 +102,4 @@ BlUe@KiWi9</p>
 </body>
 
 </html>
+
