--- a/softwareAndHardware.html
+++ b/softwareAndHardware.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>البرمجيات والأجهزة</title>
     <link rel="stylesheet" href="style.css">
      <style>
         .main-menu{
@@ -50,4 +50,5 @@
                       <p>الأجهزة والبرمجيات يشكلان معًا البنية التحتية لأي جهاز إلكتروني. يتطلب تطور التكنولوجيا تطورًا متزامنًا في كلا العنصرين لضمان أداء فعال وموثوق.</p>
           </div>
 </body>
+
 </html>
