--- a/successstories.html
+++ b/successstories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>قائمة القصص</title>
 </head>
 <body>
     <div class="frame-box ">
@@ -17,4 +17,5 @@
     </div>
     
 </body>
+
 </html>
