--- a/internetSaftey.html
+++ b/internetSaftey.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الانترنت الآمن</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
      <style>
         .main-menu{
@@ -36,7 +36,7 @@
     <p>غالباً ما تعطي الحواسيب إحساسًا خاطئًا بالأمان. في النهاية،
          لا يمكن لأحد أن يؤذيك جسديًا عبر شاشة الحاسوب. لكن لكي تبقى آمناً على الإنترنت، يجب أن تتبنى نهجًا أكثر حذرًا.
           إليك طريقة للتفكير في الأمر: عامل الإنترنت كما تعامل مركز التسوق.</p>
-          <img src="images/shopping.png" alt="عربة تسوق على لوحة مفاتيح">
+          <img src="images/shoppingInternet.jpg" alt="عربة تسوق على لوحة مفاتيح">
           <p>معظم الناس لا يعتبرون مركز التسوق مكانًا خطيرًا جدًا.
              يمكنك الذهاب إليه للتسوق واللقاء مع الأصدقاء.
              لكن هناك أشياء بسيطة تقوم بها لتبقى آمنًا، حتى وإن لم تفكر بها كثيرًا. على سبيل المثال،
@@ -56,7 +56,7 @@
 من التحقق من بريدك الإلكتروني إلى الخدمات المصرفية عبر الإنترنت. وبينما يكون من الأسهل استخدام كلمة مرور قصيرة وسهلة التذكر، 
 إلا أن ذلك قد يشكل مخاطر كبيرة على أمانك على الإنترنت. لحماية نفسك ومعلوماتك، ستحتاج إلى استخدام كلمات مرور طويلة وقوية وصعبة التخمين من قبل الآخرين، مع الحفاظ على سهولة نسبية لتذكرها
  بالنسبة لك.</p>
- <img src="images/password.jpg" alt="مخترق يسرق كلمة المرور">
+ <img src="images/theifPassword.jpeg" alt="مخترق يسرق كلمة المرور">
  <h2>لماذا أحتاج إلى كلمة مرور قوية؟</h2>
  <p>قد تتساءل الآن، لماذا أحتاج إلى كلمة مرور قوية على أي حال؟ 
     الحقيقة هي أنه رغم أن معظم المواقع الإلكترونية تكون آمنة، إلا أن هناك دائمًا احتمالًا بسيطًا أن يحاول شخص ما الوصول إلى معلوماتك أو سرقتها. يُعرف هذا عادةً باسم الاختراق (الهاكينج). 
@@ -101,4 +101,3 @@ BlUe@KiWi9</p>
 
 </body>
 </html>
-
