--- a/learningHub.html
+++ b/learningHub.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>قائمة الدروس</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
      <style>
         .main-menu{
@@ -40,5 +40,4 @@
         </ul>
     </div>
 </body>
-
 </html>
