--- a/cloudcomputing.html
+++ b/cloudcomputing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>درس الحوسبة السحابية</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
      <style>
         .main-menu{
@@ -68,5 +68,4 @@
     </div>
     
 </body>
-
 </html>
