--- a/resource.html
+++ b/resource.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>المهارات التقنية للمبتدئين - مصادر مجانية</title>
+    <title>المهارات التقنية للمبتدئين - موارد مجانية</title>
     <link rel="stylesheet" href="style.css">
     <style>
         .main-menu{
@@ -49,4 +49,3 @@
         </div>
 </body>
 </html>
-
