--- a/softwareAndHardware.html
+++ b/softwareAndHardware.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>البرمجيات والأجهزة</title>
     <link rel="stylesheet" href="style.css">
      <style>
         .main-menu{
@@ -29,7 +29,7 @@
     <h1>الأجهزة (Hardware) والبرمجيات (Software)</h1>
         <p>الأجهزة (Hardware) والبرمجيات (Software) هما عنصران أساسيان في أي نظام حاسوبي. تستخدم الأجهزة كمكونات مادية يمكنك لمسها،
              بينما تمثل البرمجيات مجموعة التعليمات والبرامج التي تدير عمل هذه الأجهزة.</p>
-             <img src="images/hardwareVsSoftware.jpeg" alt="الفرق بين البرمجيات والأجهزة">
+             <img src="images/softwareVsHardware.png" alt="الفرق بين البرمجيات والأجهزة">
              <h2>الأجهزة (Hardware)</h2>
              <ul>
                 <p>تشمل الأجهزة جميع المكونات الفيزيائية للجهاز الإلكتروني، مثل:</p>
