--- a/digitalskills.html
+++ b/digitalskills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>قصة نجاح مبرمج</title>
      <link rel="stylesheet" href="style.css">
        <style>
         .main-menu{
@@ -65,4 +65,5 @@
 
     
 </body>
+
 </html>
