--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             top:0;
             right:0;
         }
+        #logoP{
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -28,7 +31,7 @@
       </ul>
       <div class="frame-box">
           <h1>أهلاً بك في موقع مهاراتك الرقمية</h1>
-          <img src="images/logo.png" class="logo-img" alt="مهاراتك الرقمية">
+        <div id="logoP">  <img src="images/logo.png" class="logo-img" alt="مهاراتك الرقمية"></div>
     <p>
         نحن منصّة تفاعلية تهدف إلى تمكين المبتدئين من اكتساب المهارات الرقمية الأساسية بسهولة ووضوح،
         عبر محتوى مبسّط يساعدك على تطوير قدراتك وبناء مستقبل مهني أفضل في العالم الرقمي المتسارع.
