--- a/secondstory.html
+++ b/secondstory.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>قصة نجاح عامل مطعم</title>
      <link rel="stylesheet" href="style.css">
        <style>
         .main-menu{
@@ -91,4 +91,5 @@
     </div>
 
 </body>
+
 </html>
