--- a/stories.html
+++ b/stories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>قائمة القصص</title>
       <style>
         .main-menu{
             text-align: center;
@@ -36,4 +36,5 @@
     </div>
     
 </body>
+
 </html>
