--- a/about.html
+++ b/about.html
@@ -27,7 +27,9 @@
         <li><a href="contact.html">تواصل معنا</a></li>
       </ul>
     <div class="frame-box">
+        <div style="text-align:center;">
         <img src="images/logo.png" class="logo-img" alt="مهاراتك الرقمية">
+        </div>
         <h1 style="font-size: 44px;text-align: center;">مرحبا بكم في موقع مهاراتك الرقمية</h1>
     <h2>من نحن</h2>
     <p>
@@ -68,3 +70,4 @@
 
 </body>
 </html>
+
