--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
 
     <h1>اختبر مهاراتك التقنية </h1>
 
-    <form>
+    <form action="" method="post">
 
       <fieldset class="question">
         <legend class="question-title">1) ما هو نظام التشغيل الأكثر شيوعاً؟</legend>
@@ -86,4 +86,5 @@
   </div>
 
 </body>
+
 </html>
